# SGX-eml

./: CMakeLists.txt  README.md  config.toml
cmake/: FindSGX.cmake
config/: app_owner_config.toml  eml_config.toml
p2p_app/: app_enclave.cpp  app_owner.cpp  app_user.cpp  business.cpp  business.h  config.cpp  config.h  eml.cpp  isv_att_enclave.hpp  sp_att.hpp  sp_att_enclave.hpp
p2p_app/ias_request/: ias_request.hpp
p2p_app/ias_request/http_agent/: agent.h  agent_wget.hpp
p2p_app/utils/: cert_utils.cpp  cert_utils.h  crypto_utils.cpp  crypto_utils.h
p2p_enclave/: app_enclave.cpp  isv_enclave.cpp  p2p_enclave.edl  sp_enclave.cpp  sp_routines.cpp  sp_routines.h
p2p_enclave/utils/: cert_utils.h  crypto_utils.cpp  crypto_utils.h  io.h  urldecode.h
protocol/: error.h  protocol.h  trust_policy.h
utils/: codec_io.hpp  hexdump.h  socket.hpp  timelog.hpp
utils/cpptoml/include/: cpptoml.h
utils/sgx_utils/: sgx_exception.hpp
